--- a/website/config.yaml
+++ b/website/config.yaml
@@ -3,15 +3,15 @@ layoutdir: "layouts"
 publishdir: "public"
 indexes:
   category: "categories"
-baseurl: "http://willjharmer.github.io/exercism-coffeescript"
+baseurl: "http://willjharmer.github.io/exercism-coffee"
 title: "Exercism Coffeescript"
 canonifyurls: true
 params:
   description: "Practising TDD idiomatic Coffeescript"
   author_url: "http://github.com/willjharmer"
-  project_url: "http://github.com/willjharmer/exercism-coffeescript"
+  project_url: "http://github.com/willjharmer/exercism-coffee"
   github_user_name: "willjharmer"
-  travis_badge: "https://travis-ci.org/willjharmer/exercism-coffeescript.svg?branch=develop"
+  travis_badge: "https://travis-ci.org/willjharmer/exercism-coffee.svg?branch=develop"
 
   first_color: "#f8f8f8"
   first_border_color: "#e7e7e7"
